[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scenario_and_items/coluna_superior.png" type="Texture" id=1]
[ext_resource path="res://assets/scenario_and_items/coluna_inferior.png" type="Texture" id=2]
[ext_resource path="res://assets/scenario_and_items/porta.png" type="Texture" id=3]
[ext_resource path="res://scripts/gate.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 52, 273 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 86, 373.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 149, 263 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 510 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 510 ) ]
}

[node name="gate" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="door" type="StaticBody2D" parent="."]
collision_layer = 4096

[node name="door_img" type="Sprite" parent="door"]
scale = Vector2( 1, 1.2 )
texture = ExtResource( 3 )

[node name="door_shape" type="CollisionShape2D" parent="door"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="column_top" type="Sprite" parent="."]
position = Vector2( 0, -600 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 1 )

[node name="column_down" type="Sprite" parent="."]
position = Vector2( 0, 600 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 2 )
flip_h = true

[node name="gate_shape_top" type="CollisionShape2D" parent="."]
position = Vector2( 3, -606.75 )
shape = SubResource( 1 )

[node name="gate_shape_down" type="CollisionShape2D" parent="."]
position = Vector2( -5, 597.5 )
shape = SubResource( 1 )

[node name="area_door" type="Area2D" parent="."]
collision_layer = 4096

[node name="door_area" type="CollisionShape2D" parent="area_door"]
shape = SubResource( 3 )

[node name="door_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/close = SubResource( 6 )
anims/open = SubResource( 4 )

[connection signal="body_entered" from="area_door" to="." method="_on_area_door_body_entered"]
[connection signal="body_exited" from="area_door" to="." method="_on_area_door_body_exited"]
